replace deprecated Class.newInstance calls with Constructor.newInstance